scripts/nullaway/original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8.txt
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/Drunkard.java:19: error: [NullAway] initializer method does not guarantee @NonNull field nextPosition (line 109) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Drunkard(AbstractField f, Position pos) {
           ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/Drunkard.java:102: error: [NullAway] assigning @Nullable expression to @NonNull field
                bottle = null;
                       ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/GameObject.java:53: error: [NullAway] @NonNull field prev not initialized
    private Position prev;
                     ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/GameObject.java:54: error: [NullAway] @NonNull field position not initialized
    protected Position position;
                       ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/ActiveGameObject.java:15: error: [NullAway] initializer method does not guarantee @NonNull field targetPos (line 99) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ActiveGameObject(AbstractField f, Position initPos) {
           ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/ActiveGameObject.java:64: error: [NullAway] assigning @Nullable expression to @NonNull field
        position = null;
                 ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/ActiveGameObject.java:65: error: [NullAway] assigning @Nullable expression to @NonNull field
        targetPos = null;
                  ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/PathHelper.java:32: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/PathHelper.java:77: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
9 errors
